Write updated field values to the DOM to eliminate excessive decimals

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <summary class="drop"><h2>Income</h2></summary>
                     <div class="user-input">
                         <label for="wages">Wages</label>
-                        <input type="number" id="wages" class="income user-value" name="wages" value="" placeholder="£" step="0.01" min="0" >
+                        <input type="number" id="wages" class="income user-value" name="wages" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
                             <option value="weekly">Weekly</option>
