Final commit. Move currency selector to right of screen. Fix grammar issues in README.md

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <!-- How to use and currency selector section -->
-    <div>
+    <div id="wrapper">
         <div class="container">
             <details id="how-to-use" >
                 <summary aria-label="Click for a summary of how to use the calculator.">
