Add bug and fix section to README.md. Add scrollintoview function for results div in script.js

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
     </section>
 
     <!-- Results section -->
-    <div>
+    <div id="resultsDiv">
         <div id="results">
         </div>
         <!-- Pie chart container -->
