Add extra scrollIntoView method for chart div to work on mobile devices

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
     </section>
 
     <!-- Results section -->
-    <div id="resultsDiv">
+    <div>
         <div id="results">
         </div>
         <!-- Pie chart container -->
