Add scroll into view method to both results and chart div

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
     </section>
 
     <!-- Results section -->
-    <div>
+    <div id="result">
         <div id="results">
         </div>
         <!-- Pie chart container -->
